video quality update

--- a/index.html
+++ b/index.html
@@ -134,42 +134,42 @@
 
     <div class="video-carousel">
       <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/sprint_humanoid.mp4" type="video/mp4" />
+        <source src="./static/videos/low_res/sprint_humanoid.mp4" type="video/mp4" />
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/sprint_quadruped.mp4" type="video/mp4" />
+        <source src="./static/videos/low_res/sprint_quadruped.mp4" type="video/mp4" />
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/longjump_humanoid.mp4" type="video/mp4" />
+        <source src="./static/videos/low_res/longjump_humanoid.mp4" type="video/mp4" />
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/fetch_quadruped.mp4" type="video/mp4" />
-      </video>
-
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/sprint_humanoid.mp4" type="video/mp4" />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/sprint_quadruped.mp4" type="video/mp4" />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/longjump_humanoid.mp4" type="video/mp4" />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/fetch_quadruped.mp4" type="video/mp4" />
+        <source src="./static/videos/low_res/fetch_quadruped.mp4" type="video/mp4" />
       </video>
 
       <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/sprint_humanoid.mp4" type="video/mp4" />
+        <source src="./static/videos/low_res/sprint_humanoid.mp4" type="video/mp4" />
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/sprint_quadruped.mp4" type="video/mp4" />
+        <source src="./static/videos/low_res/sprint_quadruped.mp4" type="video/mp4" />
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/longjump_humanoid.mp4" type="video/mp4" />
+        <source src="./static/videos/low_res/longjump_humanoid.mp4" type="video/mp4" />
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/fetch_quadruped.mp4" type="video/mp4" />
+        <source src="./static/videos/low_res/fetch_quadruped.mp4" type="video/mp4" />
+      </video>
+
+      <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/sprint_humanoid.mp4" type="video/mp4" />
+      </video>
+      <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/sprint_quadruped.mp4" type="video/mp4" />
+      </video>
+      <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/longjump_humanoid.mp4" type="video/mp4" />
+      </video>
+      <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/fetch_quadruped.mp4" type="video/mp4" />
       </video>
     </div>
 
@@ -307,7 +307,7 @@
                 width="100%"
               >
                 <source
-                  src="./static/videos/longjump_humanoid.mp4"
+                  src="./static/videos/high_res/gaps_humanoid.mp4"
                   type="video/mp4"
                 />
               </video>
@@ -329,7 +329,7 @@
                 width="100%"
               >
                 <source
-                  src="./static/videos/fetch_quadruped.mp4"
+                  src="./static/videos/high_res/gaps_humanoid.mp4"
                   type="video/mp4"
                 />
               </video>
@@ -354,7 +354,54 @@
                 width="100%"
               >
                 <source
-                  src="./static/videos/sprint_humanoid.mp4"
+                  src="./static/videos/high_res/longjump_humanoid.mp4"
+                  type="video/mp4"
+                />
+              </video>
+            </div>
+            <div class="is-centered">
+              <p style="text-align: center">
+                Long Jump policy by Humanoid
+              </p>
+            </div>
+          </div>
+          <div style="width: 49%; float: right">
+            <div class="video_grid_item">
+              <video
+                class="grid-video training"
+                autoplay
+                muted
+                loop
+                playsinline
+                width="100%"
+              >
+                <source
+                  src="./static/videos/high_res/fetch_quadruped.mp4"
+                  type="video/mp4"
+                />
+              </video>
+              <div class="is-centered">
+                <p style="text-align: center">
+                  Fetch policy by Quadruped
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <div style="width: 49%; float: left">
+            <div class="video_grid_item">
+              <video
+                class="grid-video training"
+                autoplay
+                muted
+                loop
+                playsinline
+                width="100%"
+              >
+                <source
+                  src="./static/videos/high_res/sprint_humanoid.mp4"
                   type="video/mp4"
                 />
               </video>
@@ -376,7 +423,7 @@
                 width="100%"
               >
                 <source
-                  src="./static/videos/sprint_quadruped.mp4"
+                  src="./static/videos/high_res/sprint_quadruped.mp4"
                   type="video/mp4"
                 />
               </video>
