--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       }
     </style>
 
-    <title>RL Environments Demonstration Example</title>
+    <title>Simple-RJX</title>
 
     <link
       href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
@@ -87,7 +87,7 @@
           <div class="columns is-centered">
             <div class="column has-text-centered">
               <h1 class="title is-2 publication-title">
-                {Company} RL Demonstration Example
+                Simple-RJX
               </h1>
 
               <div class="is-size-5 publication-authors">
@@ -145,18 +145,8 @@
       <video class="video-slide" playsinline autoplay loop muted>
         <source src="./static/videos/low_res/fetch_quadruped.mp4" type="video/mp4" />
       </video>
-
       <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/low_res/sprint_humanoid.mp4" type="video/mp4" />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/low_res/sprint_quadruped.mp4" type="video/mp4" />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/low_res/longjump_humanoid.mp4" type="video/mp4" />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source src="./static/videos/low_res/fetch_quadruped.mp4" type="video/mp4" />
+        <source src="./static/videos/low_res/gaps_humanoid.mp4" type="video/mp4" />
       </video>
 
       <video class="video-slide" playsinline autoplay loop muted>
@@ -170,6 +160,9 @@
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
         <source src="./static/videos/low_res/fetch_quadruped.mp4" type="video/mp4" />
+      </video>
+      <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/gaps_humanoid.mp4" type="video/mp4" />
       </video>
     </div>
 
