collage update, humanoid fetch + humanoid hurdle demo

--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
       <video class="video-slide" playsinline autoplay loop muted>
         <source src="./static/videos/low_res/gaps_humanoid.mp4" type="video/mp4" />
       </video>
+      <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/fetch_humanoid.mp4" type="video/mp4" />
+      </video>
+      <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/hurdle_humanoid.mp4" type="video/mp4" />
+      </video>
 
       <video class="video-slide" playsinline autoplay loop muted>
         <source src="./static/videos/low_res/sprint_humanoid.mp4" type="video/mp4" />
@@ -163,6 +169,12 @@
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
         <source src="./static/videos/low_res/gaps_humanoid.mp4" type="video/mp4" />
+      </video>
+      <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/fetch_humanoid.mp4" type="video/mp4" />
+      </video>
+      <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/hurdle_humanoid.mp4" type="video/mp4" />
       </video>
     </div>
 
@@ -300,14 +312,61 @@
                 width="100%"
               >
                 <source
-                  src="./static/videos/high_res/gaps_humanoid.mp4"
+                  src="./static/videos/high_res/fetch_humanoid.mp4"
                   type="video/mp4"
                 />
               </video>
             </div>
             <div class="is-centered">
               <p style="text-align: center">
-                Long Jump policy by Humanoid
+                Fetch policy by Humanoid
+              </p>
+            </div>
+          </div>
+          <div style="width: 49%; float: right">
+            <div class="video_grid_item">
+              <video
+                class="grid-video training"
+                autoplay
+                muted
+                loop
+                playsinline
+                width="100%"
+              >
+                <source
+                  src="./static/videos/high_res/fetch_humanoid.mp4"
+                  type="video/mp4"
+                />
+              </video>
+              <div class="is-centered">
+                <p style="text-align: center">
+                  Fetch policy by Humanoid
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <div style="width: 49%; float: left">
+            <div class="video_grid_item">
+              <video
+                class="grid-video training"
+                autoplay
+                muted
+                loop
+                playsinline
+                width="100%"
+              >
+                <source
+                  src="./static/videos/high_res/hurdle_humanoid.mp4"
+                  type="video/mp4"
+                />
+              </video>
+            </div>
+            <div class="is-centered">
+              <p style="text-align: center">
+                Hurdle policy by Humanoid
               </p>
             </div>
           </div>
@@ -328,7 +387,7 @@
               </video>
               <div class="is-centered">
                 <p style="text-align: center">
-                  Fetch policy by Quadruped
+                  Gaps policy by Quadruped
                 </p>
               </div>
             </div>
