longjump quadruped media added

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
         <source src="./static/videos/low_res/gaps_humanoid.mp4" type="video/mp4" />
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/longjump_quadruped.mp4" type="video/mp4" />
+      </video>
+      <video class="video-slide" playsinline autoplay loop muted>
         <source src="./static/videos/low_res/fetch_humanoid.mp4" type="video/mp4" />
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
@@ -169,6 +172,9 @@
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
         <source src="./static/videos/low_res/gaps_humanoid.mp4" type="video/mp4" />
+      </video>
+      <video class="video-slide" playsinline autoplay loop muted>
+        <source src="./static/videos/low_res/longjump_quadruped.mp4" type="video/mp4" />
       </video>
       <video class="video-slide" playsinline autoplay loop muted>
         <source src="./static/videos/low_res/fetch_humanoid.mp4" type="video/mp4" />
