--- a/index.html
+++ b/index.html
@@ -318,14 +318,14 @@
                 width="100%"
               >
                 <source
-                  src="./static/videos/med_res/fetch_humanoid.mp4"
+                  src="./static/videos/med_res/longjump_quadruped.mp4"
                   type="video/mp4"
                 />
               </video>
             </div>
             <div class="is-centered">
               <p style="text-align: center">
-                Fetch policy by Humanoid
+                Long Jump policy by Quadruped
               </p>
             </div>
           </div>
