--- a/index.html
+++ b/index.html
@@ -304,7 +304,18 @@
         <h2 class="subtitle is-4" style="text-align: center">Locomotion</h2>
         <div class="column is-centered">
           <img
-            src="./static/images/environments/collage.png"
+            src="./static/images/environments/locomotion collage.png"
+            alt="teaser"
+            class="teaser-image"
+          />
+        </div>
+
+        <br />
+        <br />
+        <h2 class="subtitle is-4" style="text-align: center">Locomotion-Manipulation</h2>
+        <div class="column is-centered">
+          <img
+            src="./static/images/environments/locomotion collage.png"
             alt="teaser"
             class="teaser-image"
           />
@@ -312,7 +323,7 @@
         <hr />
         <div class="columns is-centered">
           <div class="column">
-            <h2 class="title is-3">Simulation Environment</h2>
+            <h2 class="title is-3">Live Simulation Environments Available at {Company}</h2>
           </div>
         </div>
 
