--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <h2 class="subtitle is-4" style="text-align: center">Locomotion-Manipulation</h2>
         <div class="column is-centered">
           <img
-            src="./static/images/environments/locomotion collage.png"
+            src="./static/images/environments/locomotion manipulation collage.png"
             alt="teaser"
             class="teaser-image"
           />
