--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
             <h2 class="title is-3">Simple-LJX Overview</h2>
             <div class="content has-text-justified">
               <p>
-                Simple-LJX is a collection of locomotion-based MJX environments
-                designed for end-to-end training using reinforcement learning.
+                Simple-LJX is a collection of locomotion MJX environments
+                designed for end-to-end Reinforcement Learning.
               </p>
               <ul>
                 <li>Built for simplicity</li>
@@ -312,7 +312,7 @@
 
         <br />
         <br />
-        <h2 class="subtitle is-4" style="text-align: center">Locomotion-Manipulation</h2>
+        <h2 class="subtitle is-4" style="text-align: center">Loco-Manipulation</h2>
         <div class="column is-centered">
           <img
             src="./static/images/environments/locomotion manipulation collage.png"
