--- a/index.html
+++ b/index.html
@@ -244,54 +244,54 @@
         />
       </video>
 
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source
-          src="./static/videos/low_res/sprint_humanoid.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source
-          src="./static/videos/low_res/sprint_quadruped.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source
-          src="./static/videos/low_res/longjump_humanoid.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source
-          src="./static/videos/low_res/longjump_quadruped.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source
-          src="./static/videos/low_res/fetch_quadruped.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source
-          src="./static/videos/low_res/gaps_humanoid.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source
-          src="./static/videos/low_res/fetch_humanoid.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <video class="video-slide" playsinline autoplay loop muted>
-        <source
-          src="./static/videos/low_res/hurdle_humanoid.mp4"
-          type="video/mp4"
-        />
-      </video>
+      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
+      <!--   <source -->
+      <!--     src="./static/videos/low_res/sprint_humanoid.mp4" -->
+      <!--     type="video/mp4" -->
+      <!--   /> -->
+      <!-- </video> -->
+      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
+      <!--   <source -->
+      <!--     src="./static/videos/low_res/sprint_quadruped.mp4" -->
+      <!--     type="video/mp4" -->
+      <!--   /> -->
+      <!-- </video> -->
+      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
+      <!--   <source -->
+      <!--     src="./static/videos/low_res/longjump_humanoid.mp4" -->
+      <!--     type="video/mp4" -->
+      <!--   /> -->
+      <!-- </video> -->
+      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
+      <!--   <source -->
+      <!--     src="./static/videos/low_res/longjump_quadruped.mp4" -->
+      <!--     type="video/mp4" -->
+      <!--   /> -->
+      <!-- </video> -->
+      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
+      <!--   <source -->
+      <!--     src="./static/videos/low_res/fetch_quadruped.mp4" -->
+      <!--     type="video/mp4" -->
+      <!--   /> -->
+      <!-- </video> -->
+      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
+      <!--   <source -->
+      <!--     src="./static/videos/low_res/gaps_humanoid.mp4" -->
+      <!--     type="video/mp4" -->
+      <!--   /> -->
+      <!-- </video> -->
+      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
+      <!--   <source -->
+      <!--     src="./static/videos/low_res/fetch_humanoid.mp4" -->
+      <!--     type="video/mp4" -->
+      <!--   /> -->
+      <!-- </video> -->
+      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
+      <!--   <source -->
+      <!--     src="./static/videos/low_res/hurdle_humanoid.mp4" -->
+      <!--     type="video/mp4" -->
+      <!--   /> -->
+      <!-- </video> -->
     </div>
 
     <!-- </div> -->
