changed "mel" to "agent"

--- a/index.html
+++ b/index.html
@@ -243,55 +243,6 @@
           type="video/mp4"
         />
       </video>
-
-      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
-      <!--   <source -->
-      <!--     src="./static/videos/low_res/sprint_humanoid.mp4" -->
-      <!--     type="video/mp4" -->
-      <!--   /> -->
-      <!-- </video> -->
-      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
-      <!--   <source -->
-      <!--     src="./static/videos/low_res/sprint_quadruped.mp4" -->
-      <!--     type="video/mp4" -->
-      <!--   /> -->
-      <!-- </video> -->
-      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
-      <!--   <source -->
-      <!--     src="./static/videos/low_res/longjump_humanoid.mp4" -->
-      <!--     type="video/mp4" -->
-      <!--   /> -->
-      <!-- </video> -->
-      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
-      <!--   <source -->
-      <!--     src="./static/videos/low_res/longjump_quadruped.mp4" -->
-      <!--     type="video/mp4" -->
-      <!--   /> -->
-      <!-- </video> -->
-      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
-      <!--   <source -->
-      <!--     src="./static/videos/low_res/fetch_quadruped.mp4" -->
-      <!--     type="video/mp4" -->
-      <!--   /> -->
-      <!-- </video> -->
-      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
-      <!--   <source -->
-      <!--     src="./static/videos/low_res/gaps_humanoid.mp4" -->
-      <!--     type="video/mp4" -->
-      <!--   /> -->
-      <!-- </video> -->
-      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
-      <!--   <source -->
-      <!--     src="./static/videos/low_res/fetch_humanoid.mp4" -->
-      <!--     type="video/mp4" -->
-      <!--   /> -->
-      <!-- </video> -->
-      <!-- <video class="video-slide" playsinline autoplay loop muted> -->
-      <!--   <source -->
-      <!--     src="./static/videos/low_res/hurdle_humanoid.mp4" -->
-      <!--     type="video/mp4" -->
-      <!--   /> -->
-      <!-- </video> -->
     </div>
 
     <!-- </div> -->
@@ -338,7 +289,7 @@
         <!--/ Method. -->
         <div class="columns is-centered">
           <div class="column">
-            <h2 class="title is-3">Our Research Mels</h2>
+            <h2 class="title is-3">Our Research Agents</h2>
           </div>
         </div>
 
