chagned name from mel to agent

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       }
     </style>
 
-    <title>Simple-LJX</title>
+    <title>LJX</title>
 
     <link
       href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
@@ -101,7 +101,7 @@
         <div class="container is-max-desktop">
           <div class="columns is-centered">
             <div class="column has-text-centered">
-              <h1 class="title is-2 publication-title">Simple-LJX</h1>
+              <h1 class="title is-2 publication-title">LJX</h1>
 
               <div class="is-size-5 publication-authors">
                 <span class="author-block">
@@ -129,7 +129,7 @@
                   <span class="link-block">
                     <a
                       class="button is-normal is-rounded is-dark"
-                      href="https://github.com/i1Cps/simple-RJX/blob/main/README.md"
+                      href="https://github.com/i1Cps/ljx-second-draft"
                     >
                       <span class="icon">
                         <i class="fab fa-github"></i>
@@ -248,7 +248,7 @@
     <!-- </div> -->
     <script src="./static/js/rolling-video.js"></script>
     <script src="./static/js/rolling-video-end.js"></script>
-    <script src="./static/js/mel_visualiser.js"></script>
+    <script src="./static/js/agent_visualiser.js"></script>
 
     <br />
     <br />
@@ -260,10 +260,10 @@
         <!-- Abstract. -->
         <div class="columns is-centered has-text-centered">
           <div class="column" style="padding: 0 40px">
-            <h2 class="title is-3">Simple-LJX Overview</h2>
+            <h2 class="title is-3">LJX Overview</h2>
             <div class="content has-text-justified">
               <p>
-                Simple-LJX is a collection of locomotion MJX environments
+                LJX is a simple collection of locomotion MJX environments
                 designed for end-to-end Reinforcement Learning.
               </p>
               <ul>
@@ -294,8 +294,8 @@
         </div>
 
         <!-- Side-by-side model images -->
-        <div class="mel-viewer-row">
-          <div class="mel-viewer-block">
+        <div class="agent-viewer-row">
+          <div class="agent-viewer-block">
             <div id="humanoid-viewer" style="margin-bottom: 1rem"></div>
             <input
               id="slider-humanoid"
@@ -307,7 +307,7 @@
             <p style="text-align: center; margin-top: 0.5rem">Humanoid Model</p>
           </div>
 
-          <div class="mel-viewer-block">
+          <div class="agent-viewer-block">
             <div id="quadruped-viewer" style="margin-bottom: 1rem"></div>
             <input
               id="slider-quadruped"
